--- a/app/index.html
+++ b/app/index.html
@@ -21,12 +21,12 @@
 
 <body unresolved>
 
-  <div class="hero-unit">
+  <!-- <div class="hero-unit">
     <yo-greeting></yo-greeting>
     <p>You now have</p>
     <yo-list></yo-list>
-  </div>
-
+  </div> -->
+  <scrolling-header-tabs></scrolling-header-tabs>
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
   <!-- endbuild-->
