changed favorite icon to add shopping cart icon

--- a/app/elements/post-card/post-card.html
+++ b/app/elements/post-card/post-card.html
@@ -48,7 +48,7 @@
 
     <core-icon-button
       id="favicon"
-      icon="favorite"
+      icon="add-shopping-cart"
       on-tap="{{favoriteTapped}}">
     </core-icon-button>
 
