--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   <!-- build:vulcanized elements/elements.vulcanized.html -->
   <link rel="import" href="elements/elements.html">
   <!-- endbuild-->
-  
+
     <style>
   html,body {
     height: 100%;
@@ -49,7 +49,7 @@
   }
   @media (min-width: 481px) {
     #tabs {
-      width: 200px;
+      width: 250px;
     }
     .container {
       width: 400px;
@@ -66,7 +66,7 @@
 
       <paper-tabs id="tabs" selected="all" self-end>
         <paper-tab name="all">All</paper-tab>
-        <paper-tab name="favorites">Favorites</paper-tab>
+        <paper-tab name="favorites">Shopping Cart</paper-tab>
       </paper-tabs>
 
     </core-toolbar>
