--- a/app/elements/post-list/post-list.html
+++ b/app/elements/post-list/post-list.html
@@ -25,7 +25,7 @@
           <img src="{{post.product_image}}" width="70" height="70">
           <h2>{{post.name}}</h2>
           <p>{{post.description}}</p>
-          <!-- <price>{{post.price}}</price> -->
+         <price>${{post.price}}</price> 
         </post-card>
       </template>
     </div>
