--- a/app/elements/post-list/post-list.html
+++ b/app/elements/post-list/post-list.html
@@ -17,7 +17,7 @@
     <post-service id="service" posts="{{posts}}"></post-service>
 
     <div>
-    ${{subtotal}}
+    <h1>Total: <span style="background-color: #FFFF00">${{subtotal}}</span><h1>
     </div>
 
 
